fix Chasen invocation with path containing spaces